[gd_scene load_steps=7 format=3 uid="uid://kkt6g2ery6vj"]

[ext_resource type="Script" path="res://Scenes/Units/unit_base.gd" id="1_dxy5t"]
[ext_resource type="Resource" uid="uid://nn8xr02g82ny" path="res://Scenes/Units/Combat/Stats/stats_default.tres" id="2_nd0e1"]
[ext_resource type="Texture2D" uid="uid://1yaupgrvy6mm" path="res://Assets/Images/shadow.png" id="2_y2xuo"]
[ext_resource type="PackedScene" uid="uid://bnwnixg1uue6h" path="res://Scenes/Units/System/unit_targeting.tscn" id="3_sujcm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hncq6"]
blend_mode = 3
no_depth_test = true
shading_mode = 0
albedo_texture = ExtResource("2_y2xuo")
texture_filter = 0
texture_repeat = false

[sub_resource type="PlaneMesh" id="PlaneMesh_qe580"]
material = SubResource("StandardMaterial3D_hncq6")
size = Vector2(1.5, 1.5)

[node name="UnitBase" type="Node3D" groups=["units"]]
script = ExtResource("1_dxy5t")
stat_block = ExtResource("2_nd0e1")

[node name="LaneOffset" type="Node3D" parent="."]

[node name="Shadow" type="MeshInstance3D" parent="LaneOffset"]
unique_name_in_owner = true
mesh = SubResource("PlaneMesh_qe580")
skeleton = NodePath("../..")

[node name="FacingRotation" type="Node3D" parent="LaneOffset"]
unique_name_in_owner = true

[node name="Sprites" type="Node3D" parent="LaneOffset/FacingRotation"]

[node name="UnitTargeting" parent="." instance=ExtResource("3_sujcm")]
unique_name_in_owner = true
